[package]
name = "shadow_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "shadow_proxy"
path = "src/lib.rs"

[[bin]]
name = "shadow_proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.30"
stretto = {version = "0.8.4", features = ["async", "async-io"]}
